--- a/index.html
+++ b/index.html
@@ -1062,10 +1062,13 @@
     </datalist>
 
     <!-- Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/validation.js"></script>
-    <script src="js/booking.js"></script>
-    <script src="js/payment.js"></script>
+    <script src="static/js/api.js"></script>
+    <script src="static/js/app.js"></script>
+    
+    <!-- Loading Indicator -->
+    <div id="loadingIndicator">
+        <div class="loading-spinner"></div>
+    </div>
     <script src="js/main.js"></script>
     <script>
         // Initialize Feather icons
